@@ -152,7 +152,7 @@ val result_error_fn = ref result_error_default;
 *)
 fun prepare_proof atomic rths chorn =
   let
-      val _ = warning "Obsolete goal command encountered";
+      val _ = legacy_feature "old goal command";
       val {thy, t=horn,...} = rep_cterm chorn;
       val _ = Term.no_dummy_patterns horn handle TERM (msg, _) => error msg;
       val (As, B) = Logic.strip_horn horn;
@@ -373,7 +373,7 @@ val Goal = Goalw [];
 (*simple version with minimal amount of checking and postprocessing*)
 fun simple_prove_goal_cterm G f =
   let
-    val _ = warning "Obsolete goal command encountered";
+    val _ = legacy_feature "old goal command";
     val As = Drule.strip_imp_prems G;
     val B = Drule.strip_imp_concl G;
     val asms = map Assumption.assume As;
